# tabpfn-bench

./: .gitignore  README.md  benchmark.py  clf_main.py  del.ipynb  main.py  main_classification.py  main_regression.py  pyproject.toml  reg_main.py  requirements.txt  test.ipynb
benchmarking/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
benchmarking/catboost_info/learn/: events.out.tfevents
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
notebooks/openml/: Australian.ipynb  GesturePhaseSegmentationProcessed.ipynb  MIP-2016-regression.ipynb  Mercedes_Benz_Greener_Manufacturing.ipynb  Moneyball.ipynb  QSAR_fish_toxicity.ipynb  SAT11-HAND-runtime-regression.ipynb  Satellite.ipynb  abalone.ipynb  ada.ipynb  airfoil_self_noise.ipynb  auction_verification.ipynb  blood-transfusion-service-center.ipynb  boston.ipynb  car.ipynb  cars.ipynb  churn.ipynb  cmc.ipynb  colleges.ipynb  concrete_compressive_strength.ipynb  cpu_activity.ipynb  credit-g.ipynb  dna.ipynb  energy_efficiency.ipynb  eucalyptus.ipynb  first-order-theorem-proving.ipynb  geographical_origin_of_music.ipynb  grid_stability.ipynb  house_prices_nominal.ipynb  jasmine.ipynb  kc1.ipynb  kin8nm.ipynb  kr-vs-kp.ipynb  madeline.ipynb  mfeat-factors.ipynb  ozone-level-8hr.ipynb  pc4.ipynb  philippine.ipynb  phoneme.ipynb  pumadyn32nh.ipynb  (+17 more)
notebooks/openml/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/openml/catboost_info/learn/: events.out.tfevents
notebooks/uciml/: credit.ipynb
results/: classification_results.json  regression_results.csv  regression_results.json
tools/: auto_clf_bench.py  benchmark_classification.py  benchmark_regression.py  constants.py  create_notebooks.py  dataset.py  evaluation.py  hyperparameter_tuning.py  main_classification.py  main_regression.py  pipe.py  preprocess.py
tools/tabular_metrics/: __init__.py  classification.py  regression.py  utils.py
